# notecache

./: .gitignore  LICENSE  README.md  dev-requirements.txt  pyproject.toml  requirements.txt
scripts/: initialize.sh  install.sh  publish-test.sh  publish.sh  reinstall-venv.sh  update.sh
src/notecache/: __init__.py  cache.py
tests/unit/: test_cache.py
